--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+.search-bar {
+  background:#23282E;
+  color:#fff;
+  width:100%;
+  padding:5px 0 7px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title{
+  font-size:20px;
+  text-align:center;
+  font-weight:bold;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.search-ui{
+  display:flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.search-button{
+  background:#fff;
+  color:#23282E;
+  border-radius:3px;
+  border:1px solid #fff;
+  display:inline-block;
+}
+.search-field-container{
+  background:#3E4347;
+  border-radius:3px;
+  display:flex;
+  align-items: center;
+  width:250px;
+  padding:2px 10px;
+  margin-right:5px;
+  justify-content: stretch;
+}
+.search-field-container input {
+  background:#3E4347;
+  color:#fff;
+  border:none;
+  outline:none;
+  flex-grow:1;
+  margin-left:5px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
